feat: ajustes de user completo